fix: search field sizing and letter spacing

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -47,7 +47,9 @@
 
 .header__search {
   position: relative;
-  box-sizing: padding-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   padding: 20px 18px 16px 67px;
   width: 459px;
   height: 60px;
@@ -65,8 +67,8 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 24px;
+  letter-spacing: 0.2px;
   /* Gray / 73 */
-
   color: #737f8b;
 }
 
@@ -76,7 +78,6 @@
 
 .header__icon {
   margin-right: 24px;
- 
 }
 
 .header__notification {
